@@ -39,6 +39,7 @@ CONFIG_RAW_BINARY=y
 # Debug Options
 #
 # CONFIG_DEBUG is not set
+CONFIG_ARCH_HAVE_STACKCHECK=y
 # CONFIG_DEBUG_SYMBOLS is not set
 
 #
@@ -95,10 +96,10 @@ CONFIG_ARCH_HAVE_CMNVECTOR=y
 #
 # ARMV6M Configuration Options
 #
-CONFIG_ARMV6M_TOOLCHAIN_BUILDROOT=y
+# CONFIG_ARMV6M_TOOLCHAIN_BUILDROOT is not set
 # CONFIG_ARMV6M_TOOLCHAIN_CODEREDL is not set
 # CONFIG_ARMV6M_TOOLCHAIN_CODESOURCERYL is not set
-# CONFIG_ARMV6M_TOOLCHAIN_GNU_EABIL is not set
+CONFIG_ARMV6M_TOOLCHAIN_GNU_EABIL=y
 # CONFIG_GPIO_IRQ is not set
 
 #
@@ -129,7 +130,9 @@ CONFIG_KL_UART0=y
 # CONFIG_KL_ADC1 is not set
 # CONFIG_KL_CMP is not set
 # CONFIG_KL_VREF is not set
-# CONFIG_KL_TPM0 is not set
+CONFIG_KL_TPM0=y
+CONFIG_KL_TPM0_PWM=y
+CONFIG_KL_TPM0_CHANNEL=0
 # CONFIG_KL_TPM1 is not set
 # CONFIG_KL_TPM2 is not set
 # CONFIG_KL_LPTIMER is not set
@@ -280,7 +283,8 @@ CONFIG_DEV_NULL=y
 # CONFIG_LOOP is not set
 # CONFIG_RAMDISK is not set
 # CONFIG_CAN is not set
-# CONFIG_PWM is not set
+CONFIG_PWM=y
+# CONFIG_PWM_PULSECOUNT is not set
 # CONFIG_I2C is not set
 # CONFIG_SPI is not set
 # CONFIG_RTC is not set
@@ -440,8 +444,6 @@ CONFIG_BUILTIN_PROXY_STACKSIZE=1024
 #
 # CONFIG_EXAMPLES_BUTTONS is not set
 # CONFIG_EXAMPLES_CAN is not set
-# CONFIG_EXAMPLES_CC3000BASIC is not set
-# CONFIG_SYSTEM_COMPOSITE is not set
 # CONFIG_EXAMPLES_DHCPD is not set
 # CONFIG_EXAMPLES_ELF is not set
 # CONFIG_EXAMPLES_FTPC is not set
@@ -470,6 +472,11 @@ CONFIG_EXAMPLES_NSH=y
 # CONFIG_EXAMPLES_OSTEST is not set
 # CONFIG_EXAMPLES_PASHELLO is not set
 # CONFIG_EXAMPLES_PIPE is not set
+CONFIG_EXAMPLES_PWM=y
+CONFIG_EXAMPLES_PWM_DEVPATH="/dev/pwm0"
+CONFIG_EXAMPLES_PWM_FREQUENCY=100
+CONFIG_EXAMPLES_PWM_DUTYPCT=50
+CONFIG_EXAMPLES_PWM_DURATION=5
 # CONFIG_EXAMPLES_POSIXSPAWN is not set
 # CONFIG_EXAMPLES_QENCODER is not set
 # CONFIG_EXAMPLES_RGMP is not set
@@ -487,7 +494,6 @@ CONFIG_EXAMPLES_NSH=y
 # CONFIG_EXAMPLES_UDP is not set
 # CONFIG_EXAMPLES_UIP is not set
 # CONFIG_EXAMPLES_USBSERIAL is not set
-# CONFIG_SYSTEM_USBMSC is not set
 # CONFIG_EXAMPLES_USBTERM is not set
 # CONFIG_EXAMPLES_WATCHDOG is not set
 
@@ -537,11 +543,13 @@ CONFIG_NSH_BUILTIN_APPS=y
 #
 # Disable Individual commands
 #
+# CONFIG_NSH_DISABLE_ADDROUTE is not set
 # CONFIG_NSH_DISABLE_CAT is not set
 CONFIG_NSH_DISABLE_CD=y
 CONFIG_NSH_DISABLE_CP=y
 # CONFIG_NSH_DISABLE_CMP is not set
 CONFIG_NSH_DISABLE_DD=y
+# CONFIG_NSH_DISABLE_DELROUTE is not set
 # CONFIG_NSH_DISABLE_ECHO is not set
 # CONFIG_NSH_DISABLE_EXEC is not set
 # CONFIG_NSH_DISABLE_EXIT is not set
@@ -606,6 +614,14 @@ CONFIG_NSH_CONSOLE=y
 #
 
 #
+# USB CDC/ACM Device Commands
+#
+
+#
+# USB Composite Device Commands
+#
+
+#
 # Custom Free Memory Command
 #
 # CONFIG_SYSTEM_FREE is not set
@@ -656,6 +672,14 @@ CONFIG_READLINE_ECHO=y
 
 #
 # USB Monitor
+#
+
+#
+# Stack Monitor
+#
+
+#
+# USB Mass Storage Device Commands
 #
 
 #
